--- a/InsecurePayAndroid/app/src/main/res/menu/menu_login.xml
+++ b/InsecurePayAndroid/app/src/main/res/menu/menu_login.xml
@@ -4,7 +4,7 @@
     tools:context=".activity.LoginActivity">
 
     <item
-        android:id="@+id/change_server"
+        android:id="@+id/itemChange_server"
         android:orderInCategory="100"
         android:title="@string/menu_change_url"
         app:showAsAction="never" />
