--- a/InsecurePayAndroid/app/src/main/res/layout/dialog_change_url.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/dialog_change_url.xml
@@ -3,8 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
+    android:paddingBottom="10dp"
     android:paddingTop="10dp">
 
     <TextView
@@ -54,9 +53,9 @@
         android:layout_alignBaseline="@+id/etUrlAddress"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/etUrlAddress"
-        android:gravity="center_horizontal"
         android:text="URL"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvPort"
@@ -65,9 +64,9 @@
         android:layout_alignBaseline="@+id/etUrlPort"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/etUrlPort"
-        android:gravity="center_horizontal"
         android:text="Port"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvPath"
@@ -76,17 +75,8 @@
         android:layout_alignBaseline="@+id/etUrlPath"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/etUrlPath"
-        android:gravity="center_horizontal"
         android:text="Path"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <Button
-        android:id="@+id/btnSaveUrl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/etUrlPath"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:text="Save" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textStyle="bold" />
 
 </RelativeLayout>
