--- a/InsecurePayAndroid/app/src/main/res/layout/content_forgot_password.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/content_forgot_password.xml
@@ -12,4 +12,55 @@
     tools:context="com.cigital.insecurepay.activity.ForgotPassword"
     tools:showIn="@layout/activity_forgot_password">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Enter your Account Number"
+        android:id="@+id/textView2"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:inputType="numberSigned"
+        android:ems="10"
+        android:id="@+id/etxt_AccountNo"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Enter your SSN Number"
+        android:id="@+id/textView3"
+        android:layout_below="@+id/etxt_AccountNo"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:inputType="numberSigned"
+        android:ems="10"
+        android:id="@+id/etxt_SSNNo"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/send"
+        android:id="@+id/btn_send"
+        android:layout_below="@+id/etxt_SSNNo"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/etxt_SSNNo" />
 </RelativeLayout>
