forgot Password function #26

--- a/InsecurePayAndroid/app/src/main/res/layout/content_forgot_password.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/content_forgot_password.xml
@@ -37,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_marginTop="16dp"
         android:text="Enter your SSN Number"
         android:id="@+id/textView3"
         android:layout_below="@+id/etxt_AccountNo"
@@ -53,6 +54,25 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_marginTop="16dp"
+        android:text="Enter your username"
+        android:id="@+id/textView4"
+        android:layout_below="@+id/etxt_SSNNo"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:id="@+id/etxt_username"
+        android:layout_below="@+id/textView4"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/etxt_SSNNo" />
 
     <Button
         android:layout_width="wrap_content"
@@ -60,7 +80,8 @@
         android:layout_marginTop="16dp"
         android:text="@string/send"
         android:id="@+id/btn_send"
-        android:layout_below="@+id/etxt_SSNNo"
+        android:layout_below="@+id/etxt_username"
         android:layout_alignParentStart="true"
-        android:layout_alignEnd="@+id/etxt_SSNNo" />
+        android:layout_alignEnd="@+id/etxt_username" />
+
 </RelativeLayout>
