--- a/InsecurePayAndroid/app/src/main/res/layout/content_home_page.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/content_home_page.xml
@@ -18,4 +18,22 @@
         android:id="@+id/tvUsername"
         android:layout_alignParentStart="true"
         android:text="HelloWorld" />
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:textSize="@dimen/nav_header_vertical_spacing"
+        android:id="@+id/textView5" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/textView6" />
+
 </RelativeLayout>
