--- a/InsecurePayAndroid/app/src/main/res/layout/dialog_change_password.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/dialog_change_password.xml
@@ -7,46 +7,48 @@
     android:paddingTop="10dp">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:orientation="vertical">
 
         <TextView
+            android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Enter your new password"
-            android:id="@+id/textView5"
-            android:layout_marginTop="16dp"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:layout_marginTop="16dp"
+            android:text="Enter your new password"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <EditText
+            android:id="@+id/et_password_field1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/et_password_field1"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/textView5"
             android:layout_marginTop="16dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true" />
+            android:ems="10"
+            android:inputType="textPassword" />
 
         <TextView
+            android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Confirm new passsword"
             android:layout_marginTop="16dp"
-            android:id="@+id/textView6" />
+            android:text="Confirm new passsword"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <EditText
+            android:id="@+id/et_password_field2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
             android:layout_marginTop="16dp"
-            android:id="@+id/et_password_field2" />
+            android:ems="10"
+            android:inputType="textPassword" />
 
     </LinearLayout>
 
