--- a/InsecurePayAndroid/app/src/main/res/layout/nav_header_home_page.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/nav_header_home_page.xml
@@ -28,7 +28,6 @@
     <TextView
         android:id="@+id/tvNavHeaderUsername"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="UserName" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
