--- a/InsecurePayAndroid/app/src/main/res/layout/fragment_transfer.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/fragment_transfer.xml
@@ -5,9 +5,36 @@
     tools:context="com.cigital.insecurepay.fragments.TransferFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
+
+    <EditText
+        android:layout_width="270dp"
+        android:layout_height="@dimen/abc_alert_dialog_button_bar_height"
+        android:inputType="number"
+        android:ems="10"
+        android:hint="Recepient Account Number"
+        android:id="@+id/etAccountNumber"
+        android:layout_gravity="center_vertical|top"
+        android:paddingEnd="@dimen/abc_action_bar_stacked_max_height"
+        android:gravity="center_horizontal" />
+
+    <Button
+        android:layout_width="175dp"
+        android:layout_height="72dp"
+        android:text="TRANSFER"
+        android:id="@+id/bTransfer"
+        android:layout_gravity="center_horizontal|bottom"
+        style="@style/Base.TextAppearance.AppCompat.Large" />
+
+    <EditText
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:ems="10"
+        android:id="@+id/etTransferAmount"
+        android:layout_gravity="left|center_vertical"
+        android:gravity="center|center_vertical|end"
+        android:hint="Amount to be transfered"
+        android:paddingEnd="@dimen/abc_action_bar_stacked_max_height" />
 
 </FrameLayout>
