--- a/InsecurePayAndroid/app/src/main/res/layout/dialog_change_password.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/dialog_change_password.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/et_password_field1"
+                android:id="@+id/etxtChangePassword_newPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/etChangePassword_newPassword"
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/et_password_field2"
+                android:id="@+id/etxtChangePassword_confirmPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/etChangePassword_confirmPassword"
