--- a/InsecurePayAndroid/app/src/main/res/layout/content_forgot_password.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/content_forgot_password.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/etxt_AccountNo"
+            android:id="@+id/etForgotPassword_AccountNo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/etForgotPass_AccountNumber"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/etxt_SSNNo"
+            android:id="@+id/etForgotPassword_SSNNo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/etForgotPass_ssnNumber"
@@ -53,7 +53,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
     <EditText
-        android:id="@+id/etxt_username"
+        android:id="@+id/etForgotPassword_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/etForgotPass_username"
@@ -66,9 +66,9 @@
         android:id="@+id/btn_send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/etxt_username"
+        android:layout_alignEnd="@+id/etForgotPassword_username"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/etxt_username"
+        android:layout_below="@+id/etForgotPassword_username"
         android:layout_marginTop="16dp"
         android:text="@string/send" />
 
