--- a/InsecurePayAndroid/app/src/main/res/layout/fragment_transfer.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/fragment_transfer.xml
@@ -7,34 +7,55 @@
     <!-- TODO: Update blank fragment layout -->
 
 
-    <EditText
-        android:layout_width="270dp"
-        android:layout_height="@dimen/abc_alert_dialog_button_bar_height"
-        android:inputType="number"
-        android:ems="10"
-        android:hint="Recepient Account Number"
-        android:id="@+id/etAccountNumber"
-        android:layout_gravity="center_vertical|top"
-        android:paddingEnd="@dimen/abc_action_bar_stacked_max_height"
-        android:gravity="center_horizontal" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <Button
-        android:layout_width="175dp"
-        android:layout_height="72dp"
-        android:text="TRANSFER"
-        android:id="@+id/bTransfer"
-        android:layout_gravity="center_horizontal|bottom"
-        style="@style/Base.TextAppearance.AppCompat.Large" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Enter the customer username"
+            android:id="@+id/textView2" />
 
-    <EditText
-        android:layout_width="240dp"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:ems="10"
-        android:id="@+id/etTransferAmount"
-        android:layout_gravity="left|center_vertical"
-        android:gravity="center|center_vertical|end"
-        android:hint="Amount to be transfered"
-        android:paddingEnd="@dimen/abc_action_bar_stacked_max_height" />
+        <EditText
+            android:layout_width="371dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/etCust_username" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Enter the amount"
+            android:id="@+id/textView3" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:ems="10"
+            android:id="@+id/ettransferAmount" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Message"
+            android:id="@+id/textView4" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ettransferDetails" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TRANSFER"
+            android:id="@+id/btn_transfer"
+            android:layout_gravity="center_horizontal" />
+
+    </LinearLayout>
 </FrameLayout>
