--- a/InsecurePayAndroid/app/src/main/res/menu/activity_home_page_drawer.xml
+++ b/InsecurePayAndroid/app/src/main/res/menu/activity_home_page_drawer.xml
@@ -23,7 +23,7 @@
 
             <item
                 android:id="@+id/nav_logout"
-                android:title="@string/action_logout" />
+                android:title="@string/nav_logout" />
 
 
 </menu>
