--- a/InsecurePayAndroid/app/src/main/res/layout/dialog_change_url.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/dialog_change_url.xml
@@ -6,56 +6,44 @@
     android:paddingBottom="10dp"
     android:paddingTop="10dp">
 
-    <TextView
-        android:id="@+id/tvServerAddress"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:gravity="center_horizontal"
-        android:text="@string/prompt_server_addr"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/etUrlAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignStart="@+id/etUrlPath"
-        android:layout_below="@+id/tvServerAddress"
-        android:hint="@string/defaultAddress"
-        android:inputType="text" />
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/etUrlPath"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/etUrlAddress"
-        android:hint="@string/defaultPath"
-        android:inputType="text" />
+            <EditText
+                android:id="@+id/etUrlAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/url"
+                android:imeOptions="actionUnspecified"
+                android:inputType="text"
+                android:maxLines="1"
+                android:singleLine="true" />
+        </android.support.design.widget.TextInputLayout>
 
-    <TextView
-        android:id="@+id/tvUrl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/etUrlAddress"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/etUrlAddress"
-        android:text="@string/url"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="bold" />
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvPath"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/etUrlPath"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/etUrlPath"
-        android:text="@string/path"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="bold" />
+            <EditText
+                android:id="@+id/etUrlPath"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/path"
+                android:imeOptions="actionUnspecified"
+                android:inputType="text"
+                android:maxLines="1"
+                android:singleLine="true" />
+
+        </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
+
 
 </RelativeLayout>
