--- a/InsecurePayAndroid/app/src/main/res/layout/fragment_account.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/fragment_account.xml
@@ -17,9 +17,9 @@
             android:id="@+id/tvAccount_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="19dp"
             android:text="@string/tvAccount_name"
             android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -29,7 +29,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/tvAccount_name"
-            android:layout_marginLeft="15dp"
             android:layout_marginStart="35dp"
             android:layout_toEndOf="@+id/tvAccount_accountNumber"
             android:text="@string/tvAccount_name"
@@ -52,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/tvAccount_accountNumber"
             android:layout_alignStart="@+id/tvAccount_fillName"
-            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
             android:text="@string/tvAccount_accountNumber"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -62,7 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/tvAccount_ssn"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="19dp"
             android:text="@string/tvAccount_userDOB"
             android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -73,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/tvAccount_userDOB"
             android:layout_alignStart="@+id/tvAccount_fillName"
-            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
             android:text="@string/tvAccount_userDOB"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -83,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/tvAccount_accountNumber"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="19dp"
             android:text="@string/tvAccount_ssn"
             android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -94,7 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/tvAccount_ssn"
             android:layout_alignStart="@+id/tvAccount_fillName"
-            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
             android:text="@string/tvAccount_ssn"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -104,7 +103,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/tvAccount_userDOB"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="19dp"
             android:text="@string/tvAccount_email"
             android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -116,8 +115,8 @@
             android:layout_alignBaseline="@+id/tvAccount_email"
             android:layout_alignParentEnd="true"
             android:layout_alignStart="@+id/tvAccount_fillSSN"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="5dp"
             android:inputType="textWebEmailAddress|textAutoComplete"
             android:maxLines="1"
             android:text="@string/tvAccount_email" />
@@ -129,7 +128,7 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/tvAccount_email"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="19dp"
             android:text="@string/tvAccount_phoneNumber"
             android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -141,11 +140,11 @@
             android:layout_alignBaseline="@+id/tvAccount_phone"
             android:layout_alignParentEnd="true"
             android:layout_alignStart="@+id/etAccount_fillEmail"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="5dp"
             android:inputType="phone"
             android:maxLines="1"
-            android:text="0000000000" />
+            android:text="@string/etAccount_phone_hint" />
 
         <TextView
             android:id="@+id/tvAccount_addressStreet"
@@ -153,7 +152,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/tvAccount_phone"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="19dp"
             android:text="@string/tvAccount_addressStreet"
             android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -165,8 +164,8 @@
             android:layout_alignBaseline="@+id/tvAccount_addressStreet"
             android:layout_alignParentEnd="true"
             android:layout_alignStart="@+id/tvAccount_fillName"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="5dp"
             android:inputType="textPostalAddress"
             android:text="@string/tvAccount_addressStreet" />
 
@@ -176,7 +175,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/tvAccount_addressStreet"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="19dp"
             android:text="@string/tvAccount_addressCity"
             android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -188,9 +187,10 @@
             android:layout_alignBaseline="@+id/tvAccount_addressCity"
             android:layout_alignParentEnd="true"
             android:layout_alignStart="@+id/tvAccount_fillName"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="5dp"
             android:maxLines="1"
+            android:inputType="text"
             android:text="@string/tvAccount_addressCity" />
 
         <TextView
@@ -199,7 +199,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/tvAccount_addressCity"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="19dp"
             android:text="@string/tvAccount_addressState"
             android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -211,8 +211,9 @@
             android:layout_alignBaseline="@+id/tvAccount_addressState"
             android:layout_alignParentEnd="true"
             android:layout_alignStart="@+id/tvAccount_fillName"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="5dp"
+            android:inputType="text"
             android:maxLines="1"
             android:text="@string/tvAccount_addressState" />
 
@@ -222,7 +223,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/tvAccount_addressState"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="19dp"
             android:text="@string/tvAccount_addressZip"
             android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -234,11 +235,10 @@
             android:layout_alignBaseline="@+id/tvAccount_addressZip"
             android:layout_alignParentEnd="true"
             android:layout_alignStart="@+id/tvAccount_fillName"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="5dp"
             android:inputType="number"
             android:maxLines="1"
-            android:numeric="integer"
             android:text="@string/tvAccount_addressZip" />
 
         <Button
@@ -248,7 +248,7 @@
             android:layout_alignStart="@+id/tvAccount_addressZip"
             android:layout_below="@+id/etAccount_fillAddressZip"
             android:enabled="false"
-            android:text="Update" />
+            android:text="@string/btnAccount_update" />
 
         <Button
             android:id="@+id/btnAccount_changePassword"
@@ -256,7 +256,7 @@
             android:layout_height="60dp"
             android:layout_alignStart="@+id/etAccount_fillAddressZip"
             android:layout_below="@+id/etAccount_fillAddressZip"
-            android:text="Change Password" />
+            android:text="@string/btnAccount_change_password" />
 
     </RelativeLayout>
 
