--- a/InsecurePayAndroid/app/src/main/res/layout/nav_header_home_page.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/nav_header_home_page.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Insecure Pay Account"
+        android:text="@string/tvHome_insecure_pay_Account"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
