--- a/InsecurePayAndroid/app/src/main/res/layout/content_forgot_password.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/content_forgot_password.xml
@@ -32,7 +32,8 @@
             android:hint="@string/etForgotPass_AccountNumber"
             android:imeOptions="actionUnspecified"
             android:maxLines="1"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:inputType="text" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -46,7 +47,8 @@
             android:hint="@string/etForgotPass_ssnNumber"
             android:imeOptions="actionUnspecified"
             android:maxLines="1"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:inputType="text" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -59,16 +61,14 @@
         android:hint="@string/etForgotPass_username"
         android:imeOptions="actionUnspecified"
         android:maxLines="1"
-        android:singleLine="true" />
+        android:singleLine="true"
+        android:inputType="text" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/btn_send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/etForgotPassword_username"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/etForgotPassword_username"
         android:layout_marginTop="16dp"
         android:text="@string/send" />
 
