--- a/InsecurePayAndroid/app/src/main/res/layout/fragment_transfer.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/fragment_transfer.xml
@@ -8,9 +8,18 @@
 
 
     <LinearLayout
+        android:id="@+id/TransferFunds"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/Transfer_progress"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:visibility="gone" />
 
         <TextView
             android:layout_width="wrap_content"
