--- a/InsecurePayAndroid/app/src/main/res/layout/content_transfer.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/content_transfer.xml
@@ -150,7 +150,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cancel"
-        android:id="@+id/button"
+        android:id="@+id/btnCancel"
         android:layout_marginStart="40dp"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
@@ -159,9 +159,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=" Transfer "
-        android:id="@+id/button2"
+        android:id="@+id/btnTransfer"
         android:layout_marginStart="57dp"
-        android:layout_alignTop="@+id/button"
-        android:layout_toEndOf="@+id/button" />
+        android:layout_alignTop="@+id/btnCancel"
+        android:layout_toEndOf="@+id/btnCancel" />
 
 </RelativeLayout>
