base classes for activity history

--- a/InsecurePayAndroid/app/src/main/res/menu/activity_home_page_drawer.xml
+++ b/InsecurePayAndroid/app/src/main/res/menu/activity_home_page_drawer.xml
@@ -13,6 +13,9 @@
             android:id="@+id/nav_transfer_funds"
             android:title="@string/nav_transfer_funds" />
         <item
+            android:id="@+id/nav_activity_history"
+            android:title="@string/nav_activity_history" />
+        <item
             android:id="@+id/nav_interest_calc"
             android:title="@string/nav_interest_calc" />
 
